--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -10,25 +10,25 @@
     "name": "GDG Korea"
   },
   "webapp": {
-    "shortName": "I/O Extended Seoul",
+    "shortName": "DevFest17",
     "themeColor": "#536DFE",
     "backgroundColor": "#536DFE"
   },
   "firebase": {
-    "name": " IO-Extended-Seoul-17",
-    "domain": "IO-Extended-Seoul-17.firebaseapp.com",
-    "database": "https://io-extended-seoul-17.firebaseio.com/",
-    "api": "AIzaSyDdtIefOcxqF-3FCcqNFVOFApzU_NeJmcY",
+    "name": "devfest17",
+    "domain": "devfest17-seoul.firebaseapp.com",
+    "database": "https://devfest17-seoul.firebaseio.com/",
+    "api": "AIzaSyCxoBzoTyO3EQ4T0qT1YoZdCiPQTk2c1rY",
     "userSessionsPath": "/userSessions",
     "ratingsPath": "/ratings",
-    "indexedDbSession": "ioex17"
+    "indexedDbSession": "devfest17"
   },
   "mailchimp": {
     "url": "https://gdg.us11.list-manage.com/subscribe/post?u=b7e853a79164ddfdbda3ed77b&amp;id=7993e39fbe",
     "name": "b_b7e853a79164ddfdbda3ed77b_7993e39fbe"
   },
   "hashtag": "dfua",
-  "disqusShortName": "gdg-io-extended-seoul-17",
+  "disqusShortName": "gdg-devfest-17-seoul",
   "partnershipProposition": "http://bit.ly/df16-sponsor",
   "videosSessionsUrl": "https://www.youtube.com/playlist?list=PLF_OUznA3RTRSTDdjnlzyC-rKVq6nq4S7",
   "enableSessionsRating": true,
@@ -55,16 +55,17 @@
   ],
   "location": {
     "apiKey": "AIzaSyBLXxv9jtcPjMhUsCFJ9UY3D4p-FJFBxsQ",
-    "name": "세종대학교 광개토관 컨벤션홀(B2)",
-    "address": "서울특별시 광진구 군자동 98",
+    "name": "서울대 글로벌컨벤션플라자(GCP)",
+    "address": "서울특별시 관악구 관악로 1 서울대학교 38동 글로벌공학교육센터",
     "pointer": {
-      "latitude": 37.550153, 
-      "longitude": 127.073173,
-      "zoom": 16
+
+      "latitude":  37.4549702, 
+      "longitude": 126.9501091,
+      "zoom": 17
     },
     "mapCenter": {
-      "latitude": 37.550153, 
-      "longitude": 127.073173
+      "latitude":  37.4546795, 
+      "longitude": 126.9503743
     },
     "images": [
       "/images/backgrounds/location1.jpg",
