--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -30,7 +30,7 @@
   "hashtag": "dfua",
   "disqusShortName": "gdg-devfest-17-seoul",
   "partnershipProposition": "http://bit.ly/df16-sponsor",
-  "videosSessionsUrl": "https://www.youtube.com/playlist?list=PLF_OUznA3RTRSTDdjnlzyC-rKVq6nq4S7",
+  "videosSessionsUrl": "https://www.youtube.com/results?search_query=devfest+seoul",
   "enableSessionsRating": true,
   "navigation": [
     {
@@ -68,8 +68,8 @@
       "longitude": 126.9503743
     },
     "images": [
-      "/images/backgrounds/location1.jpg",
-      "/images/backgrounds/location2.jpg"
+      "/images/backgrounds/location1.png",
+      "/images/backgrounds/location2.png"
     ]
   },
   "gallery": {
@@ -86,8 +86,8 @@
     "home": {
       "title": "Home",
       "headerSettings": {
-        "backgroundColor": "#ffffff",
-        "fontColor": "#4A4A4A",
+        "backgroundColor": "#0068ff",
+        "fontColor": "#000000",
         "tabBarColor": "#536DFE",
         "minHeight": "72px"
       }
@@ -95,26 +95,19 @@
     "speakers": {
       "title": "Speakers",
       "headerSettings": {
-        "backgroundColor": "#ffffff",
-        "fontColor": "#4A4A4A",
+        "backgroundColor": "#0068ff",
+        "fontColor": "#000000",
         "tabBarColor": "#fff"
       }
     },
     "schedule": {
       "title": "Schedule",
       "headerSettings": {
-        "backgroundColor": "#ffffff",
-        "fontColor": "#4A4A4A",
-        "tabBarColor": "#fff"
-      }
-    },
-    "team": {
-      "title": "GDG Team",
-      "headerSettings": {
-        "backgroundColor": "#ffffff",
-        "fontColor": "#4A4A4A",
+        "backgroundColor": "#0068ff",
+        "fontColor": "#000000",
         "tabBarColor": "#fff"
       }
     }
+    
   }
 }
